--- a/public/layouts/css/styles.css
+++ b/public/layouts/css/styles.css
@@ -13,6 +13,15 @@ body {
   margin-top: 30px;
 }
 
+.rep a:hover{
+  cursor:pointer;
+}
+
+.uname{
+  font-size:16px;
+  font-weight:bold;
+  color:red;
+}
 /* Footer */
 
 footer{
